examples/errors/redefinition/E0300_redefined_variable.hd
fn main(): void {
    let x: int = 10;
    let x: int = 20;
    return;
}
